discussion/kv_engine/141021/141021_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

Merge branch 'couchbase/mad-hatter' into master

* branch 'couchbase/mad-hatter':
  MB-42688: Do not check vbucket state on each comparator call

Change-Id: I90bd5c19aed74224d9b8e1aa7ff28d45e88756ab

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2020-12-04 18:29:08.000000000
Message: 
Uploaded patch set 5.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-12-04 19:12:51.000000000
Message: 
Patch Set 5: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32350/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\item_pager_test.cc(1681): error C2011: "STItemPagerTest_ItemPagerEvictionOrderIsSafe_Test": "class" type redefinition ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32350/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27881/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1681:1:
error: redefinition of "STItemPagerTest_ItemPagerEvictionOrderIsSafe_Test"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27881/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6089/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1681:1: error: redefinition of "STItemPagerTest_ItemPagerEvictionOrderIsSafe_Test" [clang-diagnostic-error]
TEST_P(STItemPagerTest, ItemPagerEvictionOrderIsSafe) {
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/third_party/googletest/googletest/include/gtest/gtest-param-test.h:415:9: note: expanded from macro "TEST_P"
  class GTEST_TEST_CLASS_NAME_(test_suite_name, test_name)                     \
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/third_party/googletest/googletest/include/gtest/internal/gtest-internal.h:1347:3: note: expanded from macro "GTEST_TEST_CLASS_NAME_"
  test_suite_name##_##test_name##_Test
  ^
note: expanded from here
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1224:1: note: previous definition is here
TEST_P(STItemPagerTest, ItemPagerEvictionOrderIsSafe) {
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/third_party/googletest/googletest/include/gtest/gtest-param-test.h:415:9: note: expanded from macro "TEST_P"
  class GTEST_TEST_CLASS_NAME_(test_suite_name, test_name)                     \
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/third_party/googletest/googletest/include/gtest/internal/gtest-internal.h:1347:3: note: expanded from macro "GTEST_TEST_CLASS_NAME_"
  test_suite_name##_##test_name##_Test
  ^
note: expanded from here
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1681:1: error: redefinition of "TestBody" [clang-diagnostic-error]
TEST_P(STItemPagerTest, ItemPagerEvictionOrderIsSafe) {
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/third_party/googletest/googletest/include/gtest/gtest-param-test.h:441:60: note: expanded from macro "TEST_P"
  void GTEST_TEST_CLASS_NAME_(test_suite_name, test_name)::TestBody()
                                                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1224:1: note: previous definition is here
TEST_P(STItemPagerTest, ItemPagerEvictionOrderIsSafe) {
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/third_party/googletest/googletest/include/gtest/gtest-param-test.h:441:60: note: expanded from macro "TEST_P"
  void GTEST_TEST_CLASS_NAME_(test_suite_name, test_name)::TestBody()
                                                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1681:1: error: redefinition of "gtest_registering_dummy_" [clang-diagnostic-error]
TEST_P(STItemPagerTest, ItemPagerEvictionOrderIsSafe) {
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/third_party/googletest/googletest/include/gtest/gtest-param-test.h:439:42: note: expanded from macro "TEST_P"
                             test_name)::gtest_registering_dummy_ =            \
                                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1224:1: note: previous definition is here
TEST_P(STItemPagerTest, ItemPagerEvictionOrderIsSafe) {
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/third_party/googletest/googletest/include/gtest/gtest-param-test.h:439:42: note: expanded from macro "TEST_P"
                             test_name)::gtest_registering_dummy_ =            \
                                         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6089/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1681:1:
error: redefinition of "STItemPagerTest_ItemPagerEvictionOrderIsSafe_Test" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6089/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/15487/ : FAILURE

Compile error at [2020-12-04T19:03:55.627Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1681:1:
error: redefinition of "STItemPagerTest_ItemPagerEvictionOrderIsSafe_Test"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/15487/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/6615/ : FAILURE

Compile error at [2020-12-04T18:32:54.696Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1681:1:
error: redefinition of "STItemPagerTest_ItemPagerEvictionOrderIsSafe_Test"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/6615/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/7552/ : FAILURE

Compile error at [2020-12-04T19:02:49.893Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1681:8:
error: redefinition of ?class STItemPagerTest_ItemPagerEvictionOrderIsSafe_Test?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/7552/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/7674/ : FAILURE

Compile error at [2020-12-04T18:58:15.357Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1681:8:
error: redefinition of ?class STItemPagerTest_ItemPagerEvictionOrderIsSafe_Test?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/7674/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/7944/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/4623/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
